--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PASSWORD="12345"
 PORT=3000
+MONGO_URI=mongodb+srv://fasolaraadmin:e6uU0YG7SelGHdb3@cluster0.r05wr.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
