--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
