--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "mongoose": "^6.1.4",
-    "slugify": "^1.6.4"
+    "nanoid": "^3.1.30",
+    "node-geocoder": "^3.28.0"
   }
 }
