--- a/newadmin/package.json
+++ b/newadmin/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
