--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.20"
