--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-resolvers": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.20"
