--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "apollo-server": "^3.10.2",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
+    "cypress-graphql-mock-network": "^1.0.1",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
@@ -24,5 +26,13 @@
   },
   "engines": {
     "node": "16.x"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-graphql": "^4.0.0",
+    "easygraphql-tester": "^6.0.1",
+    "jest": "^29.3.1",
+    "mocha": "^10.1.0",
+    "supertest": "^6.3.1"
   }
 }
