--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "graphql": "^16.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-apollo": "^3.1.5",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
