--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "mongoose": "^6.1.4",
-    "nanoid": "^3.1.30",
+    "nanoid": "^3.1.30"
   },
   "engines": {
     "node": "16.x"
