--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,30 @@
 {
   "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
-    "graphql": "^16.2.0",
-    "moment": "^2.29.4",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-apollo": "^3.1.5",
-    "react-dom": "17.0.2",
-    "react-moment": "^1.1.2",
-    "sass": "^1.56.1"
+    "@types/node": "18.11.12",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "next": "13.0.6",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.56.2",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
