--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -25,7 +29,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/NavBar.tsx"
-, "pages/_app.tsx"  ],
-  "exclude": ["node_modules"]
+    "components/NavBar.tsx",
+    "pages/_app.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
