--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "components/NavBar.tsx",
     "pages/_app.tsx"
-  ],
+, "components/Visitor.js"  ],
   "exclude": [
     "node_modules"
   ]
