--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "nodemon index",
+    "start": "node index",
     "test": "mocha"
   },
   "keywords": [],
@@ -15,24 +15,24 @@
     "apollo-server": "^3.10.2",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
-    "cypress-graphql-mock-network": "^1.0.1",
     "dotenv": "^16.0.3",
-    "graphql": "^16.6.0",
+    "graphql": "^15.8.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.4.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.13.15",
-    "nodemon": "^2.0.20"
+    "mongoose": "^5.13.15"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-graphql": "^4.0.0",
+    "cypress-graphql-mock-network": "^0.3.0",
     "easygraphql-tester": "^6.0.1",
     "jest": "^29.3.1",
     "mocha": "^10.1.0",
+    "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
   }
 }
