--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "description": "Apollo Server package for the FasoLara platform",
+  "main": "api/index.ts",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index",
+    "dev": "ts-node --esm api/index.ts",
+    "start": "tsc --watch",
     "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.3.0",
     "apollo-server": "^3.10.2",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
@@ -26,6 +28,7 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "chai": "^4.3.7",
     "chai-graphql": "^4.0.0",
     "cypress-graphql-mock-network": "^0.3.0",
@@ -33,6 +36,8 @@
     "jest": "^29.3.1",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.1"
+    "supertest": "^6.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
