--- a/admin/package.json
+++ b/admin/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "human-time": "^0.0.2",
+    "moment": "^2.29.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
     "recharts": "^2.2.0",
     "sass": "^1.51.0"
   },
