--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
     "start": "node index",
     "test": "mocha"
   },
-  "keywords": ["graphql", "server", "fasolara"],
+  "keywords": [
+    "graphql",
+    "server",
+    "fasolara"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,13 +21,13 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "graphql": "^15.8.0",
-    "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.4.2",
+    "graphql-scalars": "^1.20.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.15"
   },
   "engines": {
-    "node": "18.x"
+    "node": "16.x"
   },
   "devDependencies": {
     "chai": "^4.3.7",
