successfully upgraded apollo backend to v4

--- a/apollo/tsconfig.json
+++ b/apollo/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  // https://www.typescriptlang.org/tsconfig#compilerOptions
   "compilerOptions": {
     "rootDirs": ["src"],
     "outDir": "dist",
@@ -10,6 +9,5 @@
     "esModuleInterop": true,
     "types": ["node"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "public"]
 }
