--- a/apollo/package.json
+++ b/apollo/package.json
@@ -2,26 +2,34 @@
   "name": "apollo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc && node dist/index.js",
     "start": "npm run compile && node ./dist/index.js",
-    "dev": "ts-node index.ts"
+    "dev": "nodemon -e ts  --exec \"npm run compile\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.0",
+    "@graphql-tools/schema": "^9.0.13",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-resolvers": "^0.4.2",
     "graphql-scalars": "^1.20.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.2"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.8.2",
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -29,6 +37,7 @@
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
 }
