--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "api/index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -16,15 +17,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.13",
     "apollo-server": "^3.10.2",
+    "apollo-server-core": "^3.11.1",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "graphql": "^15.8.0",
     "graphql-resolvers": "^0.4.2",
     "graphql-scalars": "^1.20.1",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.13.15"
+    "mongoose": "^5.13.15",
+    "subscriptions-transport-ws": "^0.11.0",
+    "ws": "^8.12.0"
   },
   "engines": {
     "node": "18.x"
