--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "api/index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index",
-    "test": "mocha"
+    "compile": "tsc && node dist/api/index.js",
+    "start": "npm run compile && node ./dist/api/index.js",
+    "dev": "nodemon -e ts  --exec \"npm run compile\""
   },
   "keywords": [
     "graphql",
@@ -16,28 +16,33 @@
   ],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "apollo-server": "^3.10.2",
-    "apollo-server-errors": "^3.3.1",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.3",
-    "graphql": "^15.8.0",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-resolvers": "^0.4.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.13.15"
-  },
   "engines": {
     "node": "18.x"
   },
+  "dependencies": {
+    "@apollo/server": "^4.3.0",
+    "@graphql-tools/schema": "^9.0.13",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-resolvers": "^0.4.2",
+    "graphql-scalars": "^1.20.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.11.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.8.3",
+    "ws": "^8.12.0"
+  },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "chai-graphql": "^4.0.0",
-    "cypress-graphql-mock-network": "^0.3.0",
-    "easygraphql-tester": "^6.0.1",
-    "jest": "^29.3.1",
-    "mocha": "^10.1.0",
+    "@types/express": "^4.17.15",
+    "@types/graphql-resolvers": "^0.3.1",
+    "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.1"
+    "typescript": "^4.9.4"
   }
 }
