--- a/admin/package.json
+++ b/admin/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "graphql": "^16.6.0",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^9.0.2",
     "graphql-request": "^5.1.0",
     "human-time": "^0.0.2",
-    "moment": "^2.29.4",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "18.1.0",
-    "react-moment": "^1.1.2",
-    "recharts": "^2.2.0",
-    "sass": "^1.51.0"
+    "next": "^13.1.6",
+    "next-auth": "^4.19.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-moment": "^1.1.3",
+    "recharts": "^2.4.1",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "^13.1.6"
   }
 }
