--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -24,9 +24,15 @@
       "@proj/*": ["components/projects/*"],
       "@msg/*": ["components/messages/*"],
       "@cs/*": ["styles/pages/*"],
+      "@s/*": ["styles/*"],
       "@css/*": ["styles/components/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
