--- a/admin/package.json
+++ b/admin/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
-    "graphql-request": "^5.1.0",
+    "graphql": "^16.6.0",
     "human-time": "^0.0.2",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
@@ -27,6 +29,7 @@
     "sass": "^1.58.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/node": "^18.11.18",
     "eslint": "8.14.0",
     "eslint-config-next": "^13.1.6"
