--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,11 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/poppins": "^4.5.10",
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "@tailwindcss/forms": "^0.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
@@ -31,7 +36,10 @@
   "devDependencies": {
     "@iconify/react": "^4.1.0",
     "@types/node": "^18.11.18",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.14.0",
-    "eslint-config-next": "^13.1.6"
+    "eslint-config-next": "^13.1.6",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
