--- a/server/package.json
+++ b/server/package.json
@@ -36,12 +36,14 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.3",
+    "node-geocoder": "^4.2.0",
     "ws": "^8.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/graphql-resolvers": "^0.3.1",
     "@types/node": "^18.11.18",
+    "@types/node-geocoder": "^4.2.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
