--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,6 @@
     "@apollo/server": "^4.3.0",
     "@graphql-tools/schema": "^9.0.13",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -41,9 +40,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/graphql": "^14.5.0",
     "@types/graphql-resolvers": "^0.3.1",
     "@types/node": "^18.11.18",
-    "@types/node-geocoder": "^4.2.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
