--- a/admin/package.json
+++ b/admin/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
@@ -35,11 +36,22 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "@jest/globals": "^29.4.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.7.0",
     "eslint": "8.14.0",
     "eslint-config-next": "^13.1.6",
+    "global-jsdom": "^8.7.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "jsdom": "^21.1.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
