--- a/mobile/app.json
+++ b/mobile/app.json
@@ -28,7 +28,14 @@
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
-    }
+      "favicon": "./assets/images/favicon.svg"
+    },
+    "sourceExts": [
+      "js",
+      "json",
+      "ts",
+      "tsx",
+      "jsx"
+    ]
   }
 }
